changed the version of the contract jar file in the pom file made the dummy backend to implement the customer interface from the contract project

--- a/Documents/NetBeansProjects/backend_mock_customer/pom.xml
+++ b/Documents/NetBeansProjects/backend_mock_customer/pom.xml
@@ -33,7 +33,7 @@
             <groupId>B</groupId>
             <artifactId>FerryProjectContract</artifactId>
             <!--<version>1.0-20161105.131543-1</version>-->
-            <version>LATEST</version>
+            <version>1.0-20161112.230142-5</version>
         </dependency>
     </dependencies>
 </project>
