--- a/Documents/NetBeansProjects/backend_mock_customer/pom.xml
+++ b/Documents/NetBeansProjects/backend_mock_customer/pom.xml
@@ -43,8 +43,7 @@
         <dependency>
             <groupId>B</groupId>
             <artifactId>FerryProjectContract</artifactId>
-            <!--<version>1.0-20161105.131543-1</version>-->
-            <version>1.0-20161112.230142-5</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
